# data_science

./: .gitignore  Key Insights.docx  README.md
Análises Climáticas/: compilando_arquivos.ipynb  conversao_e_limpeza_1.ipynb  conversao_e_limpeza_2.ipynb  manipulando_arquivos.ipynb
Certifications/Microsoft DP100/: .amlignore  create_infra.sh  pyproject.toml
Certifications/Microsoft DP100/notebooks/: azure_ai_ml.ipynb  explore_and_use_curated_envs.ipynb
Certifications/Microsoft DP100/src/: conda-env.yml  training_with_cluster.py
Curso de Estatística/: Análise_Descritiva.ipynb  Banco_de_Dados.ipynb  Curso_de_Estatística_Parte_1.ipynb
Curso de Estatística/Parte_2/: Curso_de_Estatística_Parte_2.ipynb  Versão_bibliotecas.ipynb
Curso de Estatística/Regressão Linear/: Regressao_Linear_Exercicio.ipynb  Regressão_Linear.ipynb  Simulador_Interativo.ipynb
Curso de Estatística/Visualização de Dados/: Aula1.ipynb
Curso de Estatística/tutorial pandas/: Banco_de_Dados.ipynb  Contadores.ipynb  Criando Agrupamentos.ipynb  Criando Faixas de Valor.ipynb  Criando Novas Variáveis.ipynb  Formas de seleção e Criação de Índices  Metodos de Interpolação.ipynb  Tratamento de Dados.ipynb  aluguel_residencial.csv  (+6 more)
Fundamentals/: GNN.ipynb  decision_trees.ipynb  graph_representational_learning.ipynb  polynomial_regression.ipynb  support_vector_machines.ipynb
MNIST/: MNIST Classfication.ipynb
Machine Learning/: classification.ipynb  environment.yaml  utils.py  visualization.py
Projeto End-to-End/: End_to_end_project.ipynb
Tests/: polynomial_regression.ipynb
(+85 files in other folders)
